Добавления скриншота после падения

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,14 @@
                         -Dfile.encoding=UTF-8
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
+
+
+                    <systemProperties>
+                        <property>
+                            <name>junit.jupiter.extensions.autodetection.enabled</name>
+                            <value>true</value>
+                        </property>
+                    </systemProperties>
                     <systemPropertyVariables>
                         <base.dir>${project.basedir}/</base.dir>
                         <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
@@ -218,6 +226,7 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
     </dependencies>
 
 </project>
